[package]
name = "xcrab"
version = "0.1.0"
edition = "2021"

[dependencies]
breadx = { version = "2.0.0", features = ["async"] }
tokio = { version = "1.19.2", features = ["full"] }
toml = "0.5.9"
serde = { version = "1.0.137", features = ["derive"]}
lazy_static = "1.4.0"
slotmap = "1.0.6"

[[bin]]
name = "xcrab-msg"
path = "src/msg/main.rs"
